<resources>
    <string name="app_name">Tribes of Lagopus</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="help">Help</string>
    <string name="refreshing">Refreshing</string>
    <string name="title_activity_login">Tribes Of Lagopus - Sign in</string>
    <string name="login_username">Enter your login name</string>
    <string name="user_password">Enter your login password</string>
    <string name="login_button">Login</string>
    <string name="kingdom_name">Your kingdom</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="enable_sync">Enable background sync</string>
    <string name="logout_btn">Logout</string>
    <string name="buildings">Buildings</string>
    <string name="go_to_buildings">Go to buildings</string>
    <string name="resources">Resources</string>
    <string name="go_to_resources">Go to resources</string>
    <string name="troops">Troops</string>
    <string name="go_to_troops">Go to troops</string>
    <string name="goldPicDesc">picture of Gold</string>
    <string name="foodPicDesc">picture of Food</string>
    <string name="action_settings">Settings</string>
    <string name="string_loginMessage">Please fill in your username and password to enter the game</string>
    <string name="string_HP">HP:</string>
    <string name="string_AP">AP:</string>
    <string name="string_DP">DP:</string>
    <string name="troopDesc">Picture of troop</string>
    <string name="arrowUpDesc">Picture of arrow up icon</string>
    <string name="goldDesc">Picture of gold</string>
    <string name="foodDesc">Picture of food</string>
    <string name="townhall">Picture of townhall</string>
    <string name="building_type">Townhall</string>
    <string name="building_level">Level 1</string>
    <string name="notification_off">You don`t receive game notifications</string>
    <string name="notification_on">You will receive game notifications</string>
    <string name="background_sync_on">Background sync is ON</string>
    <string name="background_sync_off">Background sync is OFF</string>
    <string name="gold_amount">1</string>
    <string name="food_amount">1</string>
    <string name="loading">loading</string>
    <string name="register_btn">Register</string>
    <string name="your_kingdom">Write your kingdom name</string>
    <string name="add_password">Add a password</string>
    <string name="confirm_password">Confirm your password</string>
    <string name="register_name">Write your register name</string>
    <string name="back_btn">Back</string>
</resources>
