<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/buildings_listItem"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="@color/colorListItemBackground"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/building_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:adjustViewBounds="false"
        app:srcCompat="@drawable/town"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:id="@+id/building_type"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:icon="@drawable/town"
        android:text="@string/building_type"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/building_image"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/building_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Building Level"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        tools:ignore="HardcodedText,RtlHardcoded"
        tools:text="@string/building_level"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintLeft_toRightOf="@+id/building_image"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/building_type" />

    <ImageView
        android:id="@+id/arrow_image_building"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:background="@null"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/up_arrow"
        android:layout_marginEnd="16dp"
        app:layout_constraintVertical_bias="0.5"
        android:contentDescription="@string/arrowUpDesc" />
</android.support.constraint.ConstraintLayout>

