<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.greenfox.tribesoflagopusandroid.fragments.MainFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:scaleType="centerCrop">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/buildings_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:background="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/buildings_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/buildings"
                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/buildings_finished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="10 finished"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/go_to_buildings_btn"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buildings_header" />

            <Button
                android:id="@+id/go_to_buildings_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/go_to_buildings"
                android:textColor="@android:color/holo_orange_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </android.support.constraint.ConstraintLayout>



            <RelativeLayout
                android:id="@+id/resources_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:id="@+id/textview_main_resources"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:text="Resources"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textview_gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:textSize="25dp" />

                <TextView
                    android:id="@+id/textview_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:gravity="left"
                    android:paddingBottom="25dp"
                    android:paddingLeft="10dp"
                    android:textSize="25dp" />

                <!--<ListView-->
                    <!--android:id="@+id/resources_listView"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginEnd="24dp"-->
                    <!--android:layout_marginLeft="24dp"-->
                    <!--android:layout_marginRight="24dp"-->
                    <!--android:layout_marginStart="24dp"-->
                    <!--android:layout_marginTop="16dp"-->
                    <!--android:divider="@android:color/transparent"-->
                    <!--android:dividerHeight="16dp"-->
                    <!--android:orientation="horizontal"-->
                    <!--app:layout_constraintHorizontal_bias="1.0"-->
                    <!--app:layout_constraintLeft_toLeftOf="parent"-->
                    <!--app:layout_constraintRight_toRightOf="parent" />-->

            </RelativeLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/troops_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resources_layout">

            <TextView
                android:id="@+id/troops_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/troops"
                android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/troops_finished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="3 finished"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toTopOf="@+id/go_to_troops_btn"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/troops_header" />

            <Button
                android:id="@+id/go_to_troops_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/go_to_troops"
                android:textColor="@android:color/holo_orange_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </android.support.constraint.ConstraintLayout>


    </android.support.constraint.ConstraintLayout>

</FrameLayout>
